# Internship-WS22-CCA-Particle-Lenia-CPU

./: CMakeLists.txt
src/: Fields.h  Parameters.h  ParticleLenia.cpp  ParticleLenia.h  ParticleLeniaBucket.cpp  ParticleLeniaBucket.h  ParticleLeniaBucketThreaded.cpp  ParticleLeniaBucketThreaded.h  gui_bucket.cpp  gui_simple.cpp  main.cpp  test_bucket.cpp
